--- a/blog.html
+++ b/blog.html
@@ -219,7 +219,7 @@ box-sizing: border-box;
 {% for post in site.posts | limit: 10 %}
 
 <article class="hdr">
-  <div class="bd" style="border-left-color: rgb(194, 228, 122);">
+  <div class="bd" style="border-left-color:red;">
     <header class="card">
     <aside class="provider card">
       <img class="provider-favicon" src="//medias.jbfavre.org/moi.png" height="16" width="16">
